--- a/index2.html
+++ b/index2.html
@@ -66,7 +66,7 @@
           <h1>Apprendre<span class="badge badge-secondary">C#</span></h1>
           <p>C# est un langage de programmation orientée objet, commercialisé par Microsoft depuis 2002 et destiné à
             développer sur la plateforme Microsoft .NET.</p>
-          <a href="c%231.html"> <button type="button" class="btn btn-secondary">Commencer le cour </button></a>
+          <a href="CSharp.html"> <button type="button" class="btn btn-secondary">Commencer le cour </button></a>
 
         </div>
 
@@ -78,7 +78,7 @@
           <p>Microsoft Excel est un logiciel tableur de la suite bureautique Microsoft Office développé et distribué par
             l'éditeur Microsoft. La version la plus récente est Excel 2019. Il est destiné à fonctionner sur les
             plates-formes Microsoft Windows, Mac OS X, Android ou Linux.</p>
-          <a href="EXCEL1.html"> <button type="button" class="btn btn-secondary">Commencer le cour </button></a>
+          <a href="Excel.html"> <button type="button" class="btn btn-secondary">Commencer le cour </button></a>
 
         </div>
       </div>
