--- a/Excel.html
+++ b/Excel.html
@@ -20,7 +20,7 @@
   <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-dark ">
     <a class="navbar-brand" href="#">
       <a href="
-      index.html"> <img src="img/logo.png" style="width: 116px; height: 55px;"
+      index2.html"> <img src="img/logo.png" style="width: 116px; height: 55px;"
           class="d-inline-block align-top rounded-circle" alt=""> </a>
 
     </a>
