--- a/cours.html
+++ b/cours.html
@@ -16,7 +16,7 @@
   
   <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-dark ">
     <a class="navbar-brand" href="index.html">
-    <a href ="index.html" >  <img src="img/logo.png"  style = "width: 116px; height: 55px;" class="d-inline-block align-top rounded-circle" alt="" > </a>
+    <a href ="index2.html" >  <img src="img/logo.png"  style = "width: 116px; height: 55px;" class="d-inline-block align-top rounded-circle" alt="" > </a>
 
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
